# fastapi_template

./: .gitignore  .pre-commit-config.yaml  README.md  asgi.py  main.py  manage.py  pyproject.toml
app/: __init__.py  config.py  example.config.toml
app/apps/: __init__.py  models.py  schemas.py
app/apps/api/: __init__.py
app/apps/api/v1/: __init__.py
app/apps/api/v1/core/: models.py  routes.py  views.py
app/apps/api/v1/ds/: routes.py  schemas.py  views.py
app/apps/api/v1/interview/: routes.py  schemas.py  views.py
app/db/postgres/: db_async.py  db_sync.py
app/example.envs/: db.example.env  example.env  example.psql.env  example.redis.env  psql.example.env  redis.example.env  server.example.env
app/middleware/: allowed_hosts.py
app/migrations/: env.py
app/migrations/versions/: 48b330818dec_initial.py
app/services/captcha/: ru_captcha.py
app/services/captcha/types/: ru_captcha.py
app/services/ds_registrator/: browser.py  core.py  run.py
app/services/ds_registrator/types/: browser.py
app/services/interview_registrator/: core.py  run.py
app/settings/: db.py  server.py
app/utils/: files.py
app/utils/celery/: app.py
app/utils/celery/selenium/: tasks.py
app/utils/patterns/: singleton.py
cli/: db.py  site.py
server/: ds.celery.worker.conf  ds.nginx.conf  ds.server.conf  gunicorn.conf.py
tests/: test_echo.py
